# sashimi-c

./: .galpyrc  .gitignore  160925_compare_mass_variance.ipynb  AGENTS.md  MANIFEST.in  README.md  RadDist_SH_zacc.ipynb  Tk_CLASS.txt  approx_odeint.ipynb  boost_iteration.py  boost_iteration_prompt_cusps.py  debug.ipynb  dev.ipynb  dev_Na_calc.ipynb  dev_r_dependent.ipynb  docs_OrbitAveragedSpatialDistribution_Theory.md  dsdm.ipynb  edgeworth.ipynb  galpy.ipynb  itamae_catalog_migration.py  itamae_migration.py  itamae_migration_demo.ipynb  itamae_variance.py  pyproject.toml  radial_pdf_evolution_in_units_of_dynamical_time_nfw_cached_phase_tables.py  requirements.txt  sample copy 2.ipynb  sample copy.ipynb  sample.ipynb  sample_ng.ipynb  sashimi_c.py  sashimi_c_itamae.py  sashimi_c_itamae_catalog.py  sashimi_c_itamae_migration.py  sashimi_c_itamae_variance.py  sashimi_c_ng.py  sashimi_c_v2.py  smooth_sashimi.ipynb  test_r_dependent.py  test_rpdf_integration.py  (+3 more)
.ci/: itamae_native_snapshot.py  itamae_units_snapshot.py  itamae_variance_snapshot.py
.github/workflows/: itamae-migration.yml
tests/: test_itamae_migration.py  test_itamae_variance.py
tests/golden/: sashimi_c_cdm_v1_2.json
